fixed text wrapping on page heading

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,7 @@
 .ant-descriptions-item-label {
   width: 50%;
 }
+
+.ant-page-header-heading-title {
+  white-space: normal;
+}
